[css] Prevent scroll-x class to have a vertical scrollbar

--- a/http/style/main.css
+++ b/http/style/main.css
@@ -2890,4 +2890,5 @@ textarea.autogrow {
 
 .scroll-x {
 	overflow-x: auto;
+	overflow-y: hidden;
 }
